src/pages/Home/Hero/Hero.css
.hero-section .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
  padding: 70px 0;
}
.hero-section .left-content {
  width: 53%;
}
.hero-section .right-content {
  width: 43%;
}
.heading {
  color: #ffffff;
  font-family: "Funnel Display", sans-serif;
  line-height: 74px;
  font-weight: 800;
  font-size: 32px;
}
.text {
  color: #ffffff;
  font-family: "Segoe UI", sans-serif;
  font-weight: 400;
  font-size: 20px;
  margin-bottom: 50px;
  margin-top: 25px;
}
.hero-section .right-content {
  display: flex;
  gap: 25px;
  justify-content: space-between;
}
.hero-section .small-cards {
  display: flex;
  flex-direction: column;
  gap: 25px;
  width: 40%;
}
.hero-section .large-cards {
  width: 60%;
}
.hero-section .card {
  border-radius: 32px;
  transition: all 0.3s;
  padding: 25px;
}
.small-cards .card-1 {
  width: 100%;
  height: 200px;
  background-color: #cbe1e4;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: flex-start;
}
.small-cards .card-2 {
  background: url("../../../assets/image-1.jpg");
  background-position: center center;
  background-size: 100%;
  background-repeat: no-repeat;
  width: 100%;
  height: 300px;
}
.large-cards .card-3 {
  width: 100%;
  height: 520px;
  background: url("../../../assets/image-2.jpg");
  background-size: 116%;
  background-repeat: no-repeat;
  background-position: center center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.small-cards .card-2:hover {
  background-size: 115%;
}
.large-cards .card-3:hover {
  background-size: 130%;
}

.card .text {
  font-family: "Segoe UI", sans-serif;
  font-size: 14px;
  color: #080c0e;
  font-weight: 500;
  margin-top: 0;
  text-transform: uppercase;
  line-height: 24px;
}
.card h3.heading {
  font-family: "Funnel Display", sans-serif;
  font-size: 32px;
  line-height: 32px;
  color: #080c0e;
  font-weight: 700;
  margin-top: 5px;
}

.icon-info {
  background-color: #080c0e;
  padding: 12px 20px;
  border-radius: 50px;
  display: inline-flex;
  margin-top: auto;
  column-gap: 5px;
}
.icon-info .icon {
  color: #ffffff;
  font-size: 20px;
  position: relative;
  top: 3px;
}
.icon-info h3 {
  font-size: 20px;
  color: #ffffff;
  font-family: "Funnel Display", sans-serif;
}

.card-3 .card-top {
  display: flex;
  justify-content: end;
  align-items: center;
  column-gap: 15px;
}
.card-3 .card-top .text {
  font-size: 17px;
  color: #ffffff;
  font-family: "Segoe UI", sans-serif;
  line-height: 28px;
}
.card-3 .card-top .icon {
  background-color: #ffffff;
  font-size: 24px;
  color: #080c0e;
  height: 50px;
  width: 50px;
  line-height: 42px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-content: end;
  border-radius: 100%;
  display: inline-block;
}

.card-3 .card-bottom .card-btn {
  background-color: gray;
  padding: 12px 60px 12px 12px;
  border-radius: 50px;
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  column-gap: 12px;
  flex-direction: row;
}
.card-3 .card-bottom .icon {
  color: #080c0e;
  font-size: 24px;
  background-color: #ffffff;
  height: 46px;
  width: 46px;
  display: inline-block;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
}
.card-3 .card-bottom p {
  font-size: 15px;
  line-height: 15px;
  color: #ffffff;
  font-family: "Segoe UI", sans-serif;
  font-weight: 600;
}

